<resources>
    <string name="app_name">GamesApp</string>
    <string name="title_activity_launcher">GamesApp</string>
    <string name="action_settings" translatable="false">Play</string>
    <string name="title_game_list">Games</string>
    <string name="title_game_detail">Game Detail</string>
    <string name="title_activity_main" translatable="false">Launcher</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string-array name="games">
        <item>General</item>
        <item>Snake</item>
        <item>Minesweeper</item>
        <item>Math Game</item>
        <item>Flag Quiz</item>
    </string-array>

    <string name="points">points</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>

    <string name="begin">Start</string>
    <string name="gameOver">Game Over</string>
    <string name="paused">Paused</string>
    <string name="theme">Theme</string>
    <string name="back">Back</string>
    <string name="rankings">Rankings</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="favourite">Favourite Game</string>
    <string name="usernamePreference">Username Preference</string>

    <string name="tutorial" translatable="false">Tutorial</string>
    <string name="snake_desc">
The snake moves at a constant speed only in north, south, east, or west direction. "Apples" appear at random locations and when the snake "eats" (runs into) an apple, it gets longer.
The game continues until the snake "dies". by either running into the edge of the board, or by running into its own tail.
The final score is based on the number of apples eaten by the snake.
The snake can be controlled by the arrow keys.</string>
    <string name="mine_desc">You are presented with a board of squares. Some squares contain mines, others don\'t. If you click on a square containing a bomb, you lose. If you manage to click all the squares (without clicking on any bombs) you win.
Clicking a square which doesn\'t have a bomb reveals the number of neighbouring squares containing bombs. Use this information plus some guess work to avoid the bombs.</string>
    <string name="flag_desc">Each of the 10 questions asks you to identify the flag of a specific country and you are given several options to choose from. If you choose wrong, you can try another time until you guess the country.
    The score is based on how many times the right country was chosen on the first try.</string>
    <string name="math_desc">You have to reach the target number with simple math operations starting from 0. App works like a calculator, you select the number and you can concatenate simple math operations to achieve your goal!  </string>

    <string name="connection_fail">Connection has not been opened</string>

    <string name="snake" translatable="false">Snake</string>
    <string name="minesweeper" translatable="false">Minesweeper</string>
    <string name="flagQuiz" translatable="false">Flag Quiz</string>
    <string name="mathQuiz" translatable="false">Math Quiz</string>

    <string name="snake_pres">Snake is the common name for a video game concept where the player maneuvers a line which grows in length, with the line itself being a primary obstacle. The concept originated in the 1976 arcade game Blockade, and the ease of implementing Snake has led to hundreds of versions (some of which have the word snake or worm in the title) for many platforms. After a variant was preloaded on Nokia mobile phones in 1998, there was a resurgence of interest in the snake concept as it found a larger audience. There are over 300 Snake-like games for iOS alone.</string>
    <string name="mine_pres">Minesweeper is a single-player puzzle video game. The objective of the game is to clear a rectangular board containing hidden \"mines\" or bombs without detonating any of them, with help from clues about the number of neighboring mines in each field. The game originates from the 1960s, and has been written for many computing platforms in use today. It has many variations and offshoots.</string>
    <string name="math_pres">Test your Math ability with this game! You have to reach the target value in the less time possible.</string>
    <string name="flag_pres">Quiz where you will find the right Flag for the night nation.</string>

    <string name="cont">Continue</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>

    <string name="yes">Yes.</string>
    <string name="play_again">No, i want to play again.</string>
    <string name="quit">No, i want to quit.</string>

    <string name="reach">You reached score: </string>
    <string name="save"> Do you want to save it?</string>
    <string name="username">Enter your username</string>
    <string name="confirm">Confirm</string>
    <string name="play_again_button">Play Again</string>

    <string name="saveDone">Your score has been saved! What do you want to do?</string>

    <string-array name="optionsTheme">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string name="menu_home" translatable="false">Home</string>
    <string name="welcome">"Welcome!"</string>

    <string name="choices">Select Number of Choices</string>
    <string name="correct">On</string>
    <string name="guess_country">Guess the Country</string>
    <string name="guesses">guesses</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="more_regions_title">More Regions Required</string>
    <string name="more_regions_message">There are not enough countries in
      the selected regions. Please select more regions.</string>
    <string name="of">of</string>
    <string name="ok" translatable="false">OK</string>
    <string name="question">Question</string>
    <string name="quiz_title">Ten Question Flag Quiz</string>
    <string name="regions">Select Regions</string>
    <string name="your_score">Your Score for this game:</string>
    <string-array name="regionsList">
        <item>Africa</item>
        <item>Asia</item>
        <item>Europe</item>
        <item>North_America</item>
        <item>Oceania</item>
        <item>South_America</item>
    </string-array>
    <string-array name="guessesList">
        <item>3</item>
        <item>6</item>
        <item>9</item>
    </string-array>
    <string-array name="languagesList">
        <item>English</item>
        <item>Italiano</item>
    </string-array>

    <string name="currentoperatorlabel">CURRENT OPERATOR:</string>
    <string name="targetnumberlabel">TARGET NUMBER:</string>
    <string name="currentsumlabel">CURRENT TOTAL:</string>
    <string name="elapsedtimelabel">ELAPSED TIME:</string>
    <string name="addition" translatable="false">\u002B</string>
    <string name="subtraction" translatable="false">\u2212</string>
    <string name="multiplication" translatable="false">\u00D7</string>
    <string name="division" translatable="false">\u00F7</string>
    <string name="squareold" translatable="false">\u25FB</string>
    <string name="square" translatable="false">x\u00B2</string>
    <string name="cube" translatable="false">y\u00B3</string>
    <string name="squareroot" translatable="false">\u221A</string>
    <string name="arrow" translatable="false">\u2190</string>
    <string name="flocktext" translatable="false">0</string>
    <string name="splashpage_title" translatable="false">MATH:MATH</string>
    <string name="author_email" translatable="false">app by this.is.lance.miller@gmail.com</string>
    <string name="newgame" translatable="false">NEW GAME</string>
    <string name="linktoblog" translatable="false">more info@
		http://math-math-android-app.blogspot.com</string>
    <string name="copyright" translatable="false">\u00A9</string>
    <string name="quote" translatable="false"><i>Arithmetic is where numbers fly like pigeons in and out of your head.</i> ~Sandburg</string>
    <string name="apply">apply</string>
    <string name="app_desc">"Welcome on our app, enjoy your games! In this app you can find different games and you can share your scores with our community. "</string>
    <string name="sett_desc">Customize your app selecting theme, language, favorite game and default username.</string>
    <string name="rank_desc">You can find the best score achieved on this view. You can select the game you want to check and discover if you are in!</string>
    <string name="list_desc">List of the games avaiable, check the game to find the infos about it!</string>
    <string name="select_game">First select a game to play it!</string>
</resources>