<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/tb"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:id="@+id/wholescreen"
        style="@style/base.mainRelativeLayout"
        android:background="@color/darkestgray" >

    <TextView
        android:id="@+id/targetnumberlabel"
        style="@style/base.label"
        android:text="@string/targetnumberlabel"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/targetnumber"
        style="@style/base.number"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@id/targetnumberlabel"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/currentsumlabel"
        style="@style/base.label"
        android:layout_below="@id/targetnumberlabel"
        android:text="@string/currentsumlabel"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/currentnumber"
        style="@style/base.number"
        android:layout_below="@id/targetnumber"
        android:layout_marginTop="18dip"
        android:layout_toRightOf="@id/currentsumlabel"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/elapsedtimelabel"
        style="@style/base.label"
        android:layout_below="@id/currentsumlabel"
        android:text="@string/elapsedtimelabel"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/elapsedtime"
        style="@style/base.number"
        android:layout_width="50dp"
        android:layout_above="@id/movingBttn1"
        android:layout_toRightOf="@id/elapsedtimelabel"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/movingBttn1"
        style="@style/base.flock"
        android:layout_marginLeft="25dip"
        android:layout_marginTop="25dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn2"
        style="@style/base.flock"
        android:layout_marginLeft="75dip"
        android:layout_marginTop="25dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn3"
        style="@style/base.flock"
        android:layout_marginLeft="125dip"
        android:layout_marginTop="25dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn4"
        style="@style/base.flock"
        android:layout_marginLeft="175dip"
        android:layout_marginTop="25dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn5"
        style="@style/base.flock"
        android:layout_marginLeft="25dip"
        android:layout_marginTop="75dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn6"
        style="@style/base.flock"
        android:layout_marginLeft="75dip"
        android:layout_marginTop="75dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn7"
        style="@style/base.flock"
        android:layout_marginLeft="125dip"
        android:layout_marginTop="75dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn8"
        style="@style/base.flock"
        android:layout_marginLeft="175dip"
        android:layout_marginTop="75dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn9"
        style="@style/base.flock"
        android:layout_marginLeft="25dip"
        android:layout_marginTop="125dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn10"
        style="@style/base.flock"
        android:layout_marginLeft="75dip"
        android:layout_marginTop="125dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn11"
        style="@style/base.flock"
        android:layout_marginLeft="125dip"
        android:layout_marginTop="125dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn12"
        style="@style/base.flock"
        android:layout_marginLeft="175dip"
        android:layout_marginTop="125dip"
        android:textColor="#FFFFFF" />


    <Button
        android:id="@+id/movingBttn13"
        style="@style/base.flock"
        android:layout_marginLeft="25dip"
        android:layout_marginTop="175dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn14"
        style="@style/base.flock"
        android:layout_marginLeft="75dip"
        android:layout_marginTop="175dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn15"
        style="@style/base.flock"
        android:layout_marginLeft="125dip"
        android:layout_marginTop="175dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn16"
        style="@style/base.flock"
        android:layout_marginLeft="175dip"
        android:layout_marginTop="175dip"
        android:textColor="#FFFFFF" />


    <Button
        android:id="@+id/movingBttn17"
        style="@style/base.flock"
        android:layout_marginLeft="25dip"
        android:layout_marginTop="225dip"
        android:textColor="#FFFFFF" />


    <Button
        android:id="@+id/movingBttn18"
        style="@style/base.flock"
        android:layout_marginLeft="75dip"
        android:layout_marginTop="225dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn19"
        style="@style/base.flock"
        android:layout_marginLeft="125dip"
        android:layout_marginTop="225dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/movingBttn20"
        style="@style/base.flock"
        android:layout_marginLeft="175dip"
        android:layout_marginTop="225dip"
        android:textColor="#FFFFFF" />


    <Button
        android:id="@+id/addition"
        style="@style/base.bttn.math.addition"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/additionarrow"
        style="@style/base.arrow.addition" />

    <Button
        android:id="@+id/subtraction"
        style="@style/base.bttn.math.subtraction"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/subtractionarrow"
        style="@style/base.arrow.subtraction" />

    <Button
        android:id="@+id/multiplication"
        style="@style/base.bttn.math.multiplication"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/multiplicationarrow"
        style="@style/base.arrow.multiplication" />

    <Button
        android:id="@+id/division"
        style="@style/base.bttn.math.division"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/divisionarrow"
        style="@style/base.arrow.division" />

    <Button
        android:id="@+id/square"
        style="@style/base.bttn.math.square"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/cube"
        style="@style/base.bttn.math.cube"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/squareroot"
        style="@style/base.bttn.math.squareroot"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/mathmath"
        style="@style/base.mathmath"
        android:visibility="gone" />

    <Button
        android:id="@+id/newgame"
        style="@style/base.newgame"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/quote"
        style="@style/base.alt.quote"
        android:visibility="gone" />

    <TextView
        android:id="@+id/author"
        style="@style/base.alt.author"
        android:visibility="gone" />

    <TextView
        android:id="@+id/copyright"
        style="@style/base.copyright"
        android:visibility="gone" />

    </RelativeLayout>
</LinearLayout>
